--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Melhorar meu físico</button>
+            <button class="botao ativo">Melhorar meu físico</button>
             <button class="botao">Arrumar um emprego</button>
             <button class="botao">Terminar o ensino médio</button>
             <button class="botao">Me divertir mais</button>
         </div>
+        <script src="main.js"></script>
     </section>
 </body>
 </html>
